Popping a stack frame after exception breakpoint sets last method param to exception

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 7u80, 8, 9
    • Component/s: hotspot
    • Environment:

      JDK 1.8.0

    • b104
    • b66
    • generic
    • generic

        See https://netbeans.org/bugzilla/show_bug.cgi?id=251569

        Use the attached class to reproduce the bug.

        Run the class under debugger:
        $ java -agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=localhost:37535 -classpath ... exceptionbug.ExceptionBug

        Then attach jdb:
        $ jdb -attach localhost:37535

        main[1] cont
        >
        Exception occurred: java.lang.UnsupportedOperationException (uncaught)"thread=main", exceptionbug.ExceptionBug.criticalMethod(), line=26 bci=48

        main[1] pop
        main[1] step
        >
        Step completed: "thread=main", exceptionbug.ExceptionBug.criticalMethod(), line=20 bci=0

        main[1] print importantString
         importantString = "java.lang.UnsupportedOperationException: Kaboom!"

              Assignee:
              Serguei Spitsyn
              Reporter:
              Martin Entlicher
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: