8076579: Popping a stack frame after exception breakpoint sets last method param to exception

Null the InterpreterRuntime::member_name_arg_or_null return value when it is necessary

Reviewed-by: jbachorik, coleenp, twisti